[gd_scene load_steps=28 format=3 uid="uid://cgkn33vgnrydk"]

[ext_resource type="Script" uid="uid://djjt4u11pnm5k" path="res://Scenes/Characters/Enemies/mandrake.gd" id="1_r55go"]
[ext_resource type="Shader" uid="uid://ctk76iejukosx" path="res://Shaders/effects.gdshader" id="2_douqn"]
[ext_resource type="Texture2D" uid="uid://cvllxecolgdir" path="res://Sprites/mandrake_walk.png" id="2_gux10"]
[ext_resource type="Texture2D" uid="uid://cewymmokk62ja" path="res://Sprites/mandrake_spawn.png" id="3_douqn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ofee"]
resource_local_to_scene = true
shader = ExtResource("2_douqn")
shader_parameter/shading_option = 0
shader_parameter/opacitystrength = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ai6hf"]
atlas = ExtResource("3_douqn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mud72"]
atlas = ExtResource("3_douqn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_icx1u"]
atlas = ExtResource("3_douqn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq6cs"]
atlas = ExtResource("3_douqn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3n78"]
atlas = ExtResource("3_douqn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsdgm"]
atlas = ExtResource("3_douqn")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ofee"]
atlas = ExtResource("2_gux10")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1wyr"]
atlas = ExtResource("2_gux10")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_frkdw"]
atlas = ExtResource("2_gux10")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r180j"]
atlas = ExtResource("2_gux10")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tqx1"]
atlas = ExtResource("2_gux10")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6f63"]
atlas = ExtResource("2_gux10")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m8lu"]
atlas = ExtResource("2_gux10")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nbyhe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai6hf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai6hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mud72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icx1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq6cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3n78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsdgm")
}],
"loop": false,
"name": &"spawn",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ofee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1wyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frkdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r180j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tqx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6f63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m8lu")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uj1ev"]
radius = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_10gjq"]
size = Vector2(27, 51)

[sub_resource type="CircleShape2D" id="CircleShape2D_ybx6j"]
radius = 127.883

[sub_resource type="CircleShape2D" id="CircleShape2D_gux10"]
radius = 51.2562

[sub_resource type="Animation" id="Animation_frkdw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q1wyr"]
resource_name = "blink"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_gux10"]
resource_name = "heal"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r180j"]
_data = {
&"RESET": SubResource("Animation_frkdw"),
&"blink": SubResource("Animation_q1wyr"),
&"heal": SubResource("Animation_gux10")
}

[node name="Mandrake" type="CharacterBody2D"]
scale = Vector2(1.25, 1.25)
script = ExtResource("1_r55go")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6ofee")
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_nbyhe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -28)
shape = SubResource("CircleShape2D_uj1ev")
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2(0, -28)
collision_layer = 256
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1.5, 2.5)
shape = SubResource("RectangleShape2D_10gjq")

[node name="Detection" type="Area2D" parent="."]
visible = false
position = Vector2(0, -28)
collision_layer = 0
collision_mask = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_ybx6j")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AttackHitbox" type="Area2D" parent="."]
visible = false
position = Vector2(0, -28)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
shape = SubResource("CircleShape2D_gux10")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="Health" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -30.6667
offset_right = 40.0
offset_bottom = 9.3333

[node name="HealthBar" type="ColorRect" parent="Health"]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 31.0
offset_bottom = -26.0
color = Color(1, 0, 0, 0.588235)

[node name="Label" type="Label" parent="Health"]
layout_mode = 0
offset_left = -29.0
offset_top = -43.0
offset_right = 71.0
offset_bottom = -20.0
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="effects" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r180j")
}

[connection signal="area_entered" from="Detection" to="." method="_on_detection_area_entered"]
[connection signal="area_entered" from="AttackHitbox" to="." method="_on_attackhitbox_area_entered"]
[connection signal="area_exited" from="AttackHitbox" to="." method="_on_attackhitbox_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
